--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.2.15",
+    "inquirer": "^8.2.15",
     "jest": "^29.7.0",
+    "node-fetch": "^2.6.1",
     "svgjs": "^2.6.2"
   }
 }
