--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --verbose --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^8.2.15",
+    "inquirer": "^8.2.4",
     "jest": "^29.7.0",
     "node-fetch": "^2.6.1",
     "svgjs": "^2.6.2"
